gccida/c2/warning_init
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/warning_init/src/c-typeck.c:5127:6: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
v3 = spelling_0; 
     ^~~~~~~~~~
     spelling
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/warning_init/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/warning_init/src/c-typeck.c:5128:22: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
if ( spelling_base < spelling_0 ) 
                     ^~~~~~~~~~
                     spelling
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/warning_init/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/warning_init/src/c-typeck.c:5148:6: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
v3 = spelling_0; 
     ^~~~~~~~~~
     spelling
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/warning_init/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/warning_init/src/obj/c-typeck.o] Error 1
